--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                             <div class="flex__content">
                                 <p class="text--sub" >Landing Page</p>
                                 <h1 class="text--big">Energisa On</h1>
-                                <p class="text--normal">Nesse projeto pude estruturar todo seu fronte e criar alguns scripts. <br>
+                                <p class="text--normal">Nesse projeto pude estruturar todo seu fronte-end e criar alguns scripts. <br>
                                     Os botões para baixar o aplicativo na Apple store e Google paly só são exibidos para seus systemas.
                                     A navbar só é exibida se os botões das lojas não estiverem visíveis na tela.</p>
                                     <div class="row mt-5">
@@ -96,28 +96,34 @@
                     <div class="flex__container flex--piplup animate--start" data-slide="2">
                         <div class="flex__item flex__item--left">
                             <div class="flex__content">
-                                <p class="text--sub">Pokemon Gen IV</p>
-                                <h1 class="text--big">Piplup</h1>
-                                <p class="text--normal">Nesse proj</p>
+                                <p class="text--sub">Landing Page</p>
+                                <h1 class="text--big-wt">Totem Energisa</h1>
+                                <p class="text--normal">Esse projeto teve como objetivo facilitar a busca por um terminal de autoatendimento da Energida.</p>
+                                <div class="row mt-5">
+                                    <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12">
+                                        <a  href="https://fabiano-antero.github.io/TotenEnergisa/" class="btn bg-light"  target="_blank" role="button"
+                                            aria-pressed="true">Ver modelo</a>
+                                    </div>
+                                </div>
                             </div>
-                            <p class="text__background">Piplup</p>
+                            <p class="text__background">Energisa</p>
                         </div>
                         <div class="flex__item flex__item--right"></div>
-                        <img class="eon__img" src="" />
+                        <img class="eon__img" src="img/etotem.png" />
                     </div>
-                    <div class="flex__container flex--blaziken animate--start" data-slide="3">
+                    <div class="flex__container  bg-dark flex--blaziken animate--start" data-slide="3">
                         <div class="flex__item flex__item--left">
                             <div class="flex__content">
-                                <p class="text--sub">Pokemon Gen III</p>
-                                <h1 class="text--big">Blaziken</h1>
-                                <p class="text--normal">Blaziken is the Fire/Fighting-type Starter Pokémon of the Hoenn
+                                <p class="text--sub text-dark" >Página de confirmação</p>
+                                <h1 class="text--big">Gerenciamento de imóvel</h1>
+                                <p class="text--normal text-dark">Blaziken is the Fire/Fighting-type Starter Pokémon of the Hoenn
                                     region, introduced in Generation III. Blaziken is a large, bipedal, humanoid
                                     bird-like Pokémon that resembles a rooster.</p>
                             </div>
-                            <p class="text__background">Blaziken</p>
+                            <p class="text__background">Energisa</p>
                         </div>
                         <div class="flex__item flex__item--right"></div>
-                        <img class="eon__img" src="https://s4.postimg.org/6795hnlql/blaziken.png" />
+                        <img class="eon__img" src="img/Egenrencia.png" />
                     </div>
                     <div class="flex__container flex--dialga animate--start" data-slide="4">
                         <div class="flex__item flex__item--left">
@@ -133,7 +139,7 @@
                             <p class="text__background">Dialga</p>
                         </div>
                         <div class="flex__item flex__item--right"></div>
-                        <img class="eon__img" src="https://s4.postimg.org/43yq9zlxp/dialga.png" />
+                        <img class="eon__img" src="" />
                     </div>
                     <div class="flex__container flex--zekrom animate--start" data-slide="5">
                         <div class="flex__item flex__item--left">
