--- a/index.html
+++ b/index.html
@@ -30,6 +30,19 @@
                 <div class="container-fluid">
                     <div class="container">
 
+
+                        <div class="row">
+                            <div class="col-md-3"></div>
+                            <div class="col-md-4 offset-md-4" data-aos="fade-down" data-aos-easing="linear"
+                                    data-aos-duration="3000">
+                                <div class="alert alert-dark alert-dismissible fade show" role="alert">
+                                    <strong>Eí!</strong> Me desculpe a bagunça, mas ainda estou arrimando a casa.
+                                    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                                        <span aria-hidden="true">&times;</span>
+                                    </button>
+                                </div>
+                            </div>
+                        </div>
                         <div class="row">
                             <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6 mt-5">
                                 <p class="titulo" data-aos="zoom-in">Olá, mundo!<span class="underline">_</span></p>
@@ -67,10 +80,6 @@
 
             <div class="section" id="section1">
 
-
-            </div>
-
-            <div class="section" id="section2">
                 <div class="slider__warpper">
                     <div class="flex__container flex--eon flex--active" data-slide="1">
                         <div class="flex__item flex__item--left">
@@ -103,7 +112,7 @@
                                     terminal de autoatendimento da Energida.</p>
                                 <div class="row mt-5">
                                     <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12">
-                                        <a href="https://fabiano-antero.github.io/TotenEnergisa/" class="btn bg-light"
+                                        <a href="https://fabiano-antero.github.io/TOTEM/" class="btn bg-light"
                                             target="_blank" role="button" aria-pressed="true">Ver modelo</a>
                                     </div>
                                 </div>
@@ -129,25 +138,24 @@
                         <img class="eon__img" src="img/Egenrencia.png" />
                     </div>
 
+
                     <!--
 
-                    
                     <div class="flex__container flex--dialga animate--start" data-slide="4">
                         <div class="flex__item flex__item--left">
                             <div class="flex__content">
-                                <p class="text--sub">Pokemon Gen IV</p>
-                                <h1 class="text--big">Dialga</h1>
-                                <p class="text--normal">Dialga is a Steel/Dragon-type Legendary Pokémon. Dialga is a
-                                    sauropod-like Pokémon. It is mainly blue with some gray, metallic portions, such as
-                                    its chest plate, which has a diamond in the center. It also has various, light blue
-                                    lines all over
-                                    its body.</p>
+                                <p class="text--sub">Mobile</p>
+                                <h1 class="text--big">Anamnese Digital</h1>
+                                <p class="text--normal">Aplicativo desenvolvido com o framework Ionic, que alimenta uma API
+                                    Restfull em Python e Flask. Toda sua UI e UX foram criadas por mim.
+                                </p>
                             </div>
                             <p class="text__background">Dialga</p>
                         </div>
                         <div class="flex__item flex__item--right"></div>
                         <img class="eon__img" src="" />
                     </div>
+                    <!--
                     <div class="flex__container flex--zekrom animate--start" data-slide="5">
                         <div class="flex__item flex__item--left">
                             <div class="flex__content">
@@ -171,18 +179,15 @@
                     <a href="#" class="slide-nav active" data-slide="1">pikachu</a>
                     <a href="#" class="slide-nav" data-slide="2">piplup</a>
                     <a href="#" class="slide-nav" data-slide="3">blaziken</a>
+                    <!--
+
                     <a href="#" class="slide-nav" data-slide="4">dialga</a>
-                    <a href="#" class="slide-nav" data-slide="5">zekrom</a>
+                    <a href="#" class="slide-nav" data-slide="5">zekrom</a>-->
                 </div>
             </div>
 
-            <!--
-            <div class="section" id="section3">
-                <div class="intro">
-                    <h1>Keep it simple!</h1>
-                </div>
-            </div>
-            -->
+
+
 
         </div>
 
@@ -205,7 +210,7 @@
     <script>
         AOS.init();
     </script>
-
+    <script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
 </body>
 
 </html>
