Correção do metodo que envia a anamnese

--- a/index.html
+++ b/index.html
@@ -127,10 +127,7 @@
                             <div class="flex__content">
                                 <p class="text--sub text-dark">Página de confirmação</p>
                                 <h1 class="text--big">Gerenciamento de imóvel</h1>
-                                <p class="text--normal text-dark">Blaziken is the Fire/Fighting-type Starter Pokémon of
-                                    the Hoenn
-                                    region, introduced in Generation III. Blaziken is a large, bipedal, humanoid
-                                    bird-like Pokémon that resembles a rooster.</p>
+                                <p class="text--normal text-dark">
                             </div>
                             <p class="text__background">Energisa</p>
                         </div>
