Correção do metodo que envia a anamnese

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                             <div class="col-md-4 offset-md-4" data-aos="fade-down" data-aos-easing="linear"
                                     data-aos-duration="3000">
                                 <div class="alert alert-dark alert-dismissible fade show" role="alert">
-                                    <strong>Eí!</strong> Me desculpe a bagunça, mas ainda estou arrimando a casa.
+                                    <strong>Eí!</strong> Me desculpe a bagunça, mas ainda estou arrumando a casa.
                                     <button type="button" class="close" data-dismiss="alert" aria-label="Close">
                                         <span aria-hidden="true">&times;</span>
                                     </button>
