Correção do metodo que envia a anamnese

--- a/index.html
+++ b/index.html
@@ -122,35 +122,33 @@
                         <div class="flex__item flex__item--right"></div>
                         <img class="eon__img" src="img/etotem.png" />
                     </div>
-                    <div class="flex__container  bg-dark flex--blaziken animate--start" data-slide="3">
+                    <div class="flex__container flex--blaziken animate--start" data-slide="3">
                         <div class="flex__item flex__item--left">
                             <div class="flex__content">
-                                <p class="text--sub text-dark">Página de confirmação</p>
+                                <p class="text--sub ">Página de confirmação</p>
                                 <h1 class="text--big">Gerenciamento de imóvel</h1>
-                                <p class="text--normal text-dark">
+                                <p class="text--normal ">
                             </div>
                             <p class="text__background">Energisa</p>
                         </div>
                         <div class="flex__item flex__item--right"></div>
                         <img class="eon__img" src="img/Egenrencia.png" />
                     </div>
-
-
-                    <!--
-
                     <div class="flex__container flex--dialga animate--start" data-slide="4">
                         <div class="flex__item flex__item--left">
                             <div class="flex__content">
                                 <p class="text--sub">Mobile</p>
                                 <h1 class="text--big">Anamnese Digital</h1>
-                                <p class="text--normal">Aplicativo desenvolvido com o framework Ionic, que alimenta uma API
+                                <p class="text--normal">
+                                    Aplicativo desenvolvido com o framework Ionic, que alimenta uma API
                                     Restfull em Python e Flask. Toda sua UI e UX foram criadas por mim.
                                 </p>
+                                <p class="text--normal">Além de estar a frente desse projeto,também estou atuando como desenvolverdo, trabanhando no front-end do aplicativo e no front-end da dashboard </p>
                             </div>
-                            <p class="text__background">Dialga</p>
+                            <p class="text__background">ANAMNESE</p>
                         </div>
                         <div class="flex__item flex__item--right"></div>
-                        <img class="eon__img" src="" />
+                        <img class="eon__img" src="./img/Grupo 18.png" />
                     </div>
                     <!--
                     <div class="flex__container flex--zekrom animate--start" data-slide="5">
@@ -175,10 +173,9 @@
                 <div class="slider__navi">
                     <a href="#" class="slide-nav active" data-slide="1">pikachu</a>
                     <a href="#" class="slide-nav" data-slide="2">piplup</a>
-                    <a href="#" class="slide-nav" data-slide="3">blaziken</a>
-                    <!--
-
+                    <a href="#" class="slide-nav" data-slide="3">blaziken</a>    
                     <a href="#" class="slide-nav" data-slide="4">dialga</a>
+                        <!--
                     <a href="#" class="slide-nav" data-slide="5">zekrom</a>-->
                 </div>
             </div>
