Correção do metodo que envia a anamnese

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                                 </p>
                                 <p class="text--normal">Além de estar a frente desse projeto,também estou atuando como desenvolverdo, trabanhando no front-end do aplicativo e no front-end da dashboard </p>
                             </div>
-                            <p class="text__background">ANAMNESE</p>
+                            <p class="text__background">Fábrica de software</p>
                         </div>
                         <div class="flex__item flex__item--right"></div>
                         <img class="eon__img" src="./img/Grupo 18.png" />
