--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
 
                         <div class="row">
                             <div class="col-md-3"></div>
-                            <div class="col-md-4 offset-md-4" data-aos="fade-down" data-aos-easing="linear"
+                        </div>
+                        <div class="row">
+                            <div class="col-md-4 offset-md-4 alerta" data-aos="fade-down" data-aos-easing="linear"
                                     data-aos-duration="3000">
                                 <div class="alert alert-dark alert-dismissible fade show" role="alert">
                                     <strong>Eí!</strong> Me desculpe a bagunça, mas ainda estou arrumando a casa.
@@ -42,13 +44,11 @@
                                     </button>
                                 </div>
                             </div>
-                        </div>
-                        <div class="row">
                             <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6 mt-5">
                                 <p class="titulo" data-aos="zoom-in">Olá, mundo!<span class="underline">_</span></p>
                                 <p class="sub-titulo" data-aos="zoom-in">Eu sou Fabiano Antero</p>
                             </div>
-                            <div class=col-sm-12 col-md-12 col-lg-12 col-xl-12">
+                            <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12">
                                 <img class="perfil" data-aos="fade-down" data-aos-easing="linear"
                                     data-aos-duration="1500"
                                     src="img/45268743_2590471564311294_7347460515525835736_n.svg" alt="">
@@ -62,7 +62,7 @@
                         </div>
                         <div class="row mt-5">
                             <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12">
-                                <a href="#" class="btn btntwo btn-outline-warning" role="button" aria-pressed="true"
+                                <a href="https://www.linkedin.com/in/fabianoantero/" class="btn btntwo btn-outline-warning" role="button" aria-pressed="true"
                                     data-aos="zoom-in">Contate-me</a>
                             </div>
                         </div>
@@ -77,8 +77,38 @@
             </div>
 
 
-
             <div class="section" id="section1">
+                <div class="row">
+                    <div class="col-md-12">
+                        <img class="img-bg-logo2" src="img/background-logo.svg">
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-6 ">
+                        <div>
+                            <img class="efeito" src="../Portfólio-fabs//img//efeito.svg" alt="">
+                        </div>
+                        <img class="sobre mt-5" src="../Portfólio-fabs/img/AirBrush_20191119115702.jpg" alt="">
+                    </div>
+                    <div class="col-md-6 mt-5">
+                        <div class="sobre-text">
+                            <p class="mt-4">
+                                Olá, me chamo Fabiano Antero, sou estudante de Ciência da Computação pelo Unipê(Centro Universitário de João pessoa), e atualmente resido em João Pessoa.
+                            </p>
+                            <p>
+                                <br>Minha jornada teve início a cerca de dois anos quando entrei para o projeto de extensão, <strong>Fábrica de Software</strong>.
+                                Atualmente na Fábrica de Software, estou a frente de um projeto para os alunos de medicina, um <strong>aplicativo mobile chamado Anamnese Digital</strong> , nele criei sua toda sua <strong>UI & UX</strong> e utilizei 
+                                <strong>Ionic</strong> e <strong>Angular</strong>.
+                            </p>
+                            <p>
+                                <br> Para fomentar minha jornada, estou a um ano como estagiário no Grupo Energisa S.A no setor de canais digitais, onde entrei como FullStack, porém
+                                minha maior área de atuação nos cánais digitias foi com <strong>UI & UX</strong> de seus produtos, um dos produtos que mais teve minha atenção com <strong>UI & UX</strong> foi o novo toten da Energisa.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="section" id="section2">
 
                 <div class="slider__warpper">
                     <div class="flex__container flex--eon flex--active" data-slide="1">
