Correção do metodo que envia a anamnese

--- a/index.html
+++ b/index.html
@@ -86,9 +86,9 @@
                 <div class="row">
                     <div class="col-md-6 ">
                         <div>
-                            <img class="efeito" src="../Portfólio-fabs//img//efeito.svg" alt="">
+                            <img class="efeito" src="img/efeito.svg" alt="">
                         </div>
-                        <img class="sobre mt-5" src="../Portfólio-fabs/img/AirBrush_20191119115702.jpg" alt="">
+                        <img class="sobre mt-5" src="img/AirBrush_20191119115702.jpg" alt="">
                     </div>
                     <div class="col-md-6 mt-5">
                         <div class="sobre-text">
