Correção do metodo que envia a anamnese

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                             </p>
                             <p>
                                 <br>Minha jornada teve início a cerca de dois anos quando entrei para o projeto de extensão, <strong>Fábrica de Software</strong>.
-                                Atualmente na Fábrica de Software, estou a frente de um projeto para os alunos de medicina, um <strong>aplicativo mobile chamado Anamnese Digital</strong> , nele criei sua toda sua <strong>UI & UX</strong> e utilizei 
+                                Atualmente na Fábrica de Software, estou a frente de um projeto para os alunos de medicina, um <strong>aplicativo mobile chamado Anamnese Digital</strong> , nele criei toda sua <strong>UI & UX</strong> e utilizei 
                                 <strong>Ionic</strong> e <strong>Angular</strong>.
                             </p>
                             <p>
@@ -116,10 +116,10 @@
                             <div class="flex__content">
                                 <p class="text--sub">Landing Page</p>
                                 <h1 class="text--big">Energisa On</h1>
-                                <p class="text--normal">Nesse projeto pude estruturar todo seu fronte-end e criar alguns
+                                <p class="text--normal">Nesse projeto pude estruturar todo seu front-end e criar alguns
                                     scripts. <br>
-                                    Os botões para baixar o aplicativo na Apple store e Google paly só são exibidos para
-                                    seus systemas.
+                                    Os botões para baixar o aplicativo na Apple Store e Google Play só são exibidos para respectivos
+                                    seus sistemas.
                                     A navbar só é exibida se os botões das lojas não estiverem visíveis na tela.</p>
                                 <div class="row mt-5">
                                     <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12">
