Correção do metodo que envia a anamnese

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                     <div class="col-md-6 mt-5">
                         <div class="sobre-text">
                             <p class="mt-4">
-                                Olá, me chamo Fabiano Antero, sou estudante de Ciência da Computação pelo Unipê(Centro Universitário de João pessoa), e atualmente resido em João Pessoa.
+                                Olá, me chamo Fabiano Antero, sou estudante de Ciência da Computação pelo Unipê (Centro Universitário de João pessoa), e atualmente resido na cidade de João Pessoa/PB.
                             </p>
                             <p>
                                 <br>Minha jornada teve início a cerca de dois anos quando entrei para o projeto de extensão, <strong>Fábrica de Software</strong>.
