Correção do metodo que envia a anamnese

--- a/index.html
+++ b/index.html
@@ -157,7 +157,9 @@
                             <div class="flex__content">
                                 <p class="text--sub ">Página de confirmação</p>
                                 <h1 class="text--big">Gerenciamento de imóvel</h1>
-                                <p class="text--normal ">
+                                <p class="text--normal ">Criei essa página para ser enviada SMS, para que os clientes confirmem a solicitação de gerecnciamneto de uma de suas  unidades consumidoras.
+                                    Nela consumo um EndPoint com javascript para que ele retorne os dados do solicitante.
+                                </p>
                             </div>
                             <p class="text__background">Energisa</p>
                         </div>
