--- a/index.html
+++ b/index.html
@@ -1,242 +1,82 @@
 <!DOCTYPE html>
-<html lang="pt-br" xmlns="http://www.w3.org/1999/xhtml">
+<html lang="pt-BR">
 
 <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>Fabiano UI & UX / Developer </title>
-    <meta name="author" content="Alvaro Trigo Lopez" />
-    <meta name="description" content="fullPage full-screen navigation and sections control menu." />
-    <meta name="keywords" content="fullpage,jquery,demo,screen,fullscreen,navigation,control arrows, dots" />
-    <meta name="Resource-type" content="Document" />
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
-        integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="dist/fullpage.css" />
-    <link rel="stylesheet" type="text/css" href="css/examples.css" />
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Fabiano UI&UX Designer</title>
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/slide.css">
-    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+
 
 </head>
 
 <body>
-    <nav class="navbar sticky-top bg-transparent">
-        <a class="navbar-brand" href="#"> <img data-aos="zoom-in" class="logo" src="img/logo.svg" alt="" srcset=""></a>
-    </nav>
-    <main>
+    <div class="container">
+        <div class="section-one">
+            <div class="apresentation">
+                <span class="apresentation-Ola fade-in-left">Olá, mundo!</span>
+                <span class="apresentation-eusou fade-in-left2">
+                    Eu sou <br> Fabiano Antero
+                </span>
+                <p class="apresentation-about fade-in-left3">Sou um Designer de UI&UX apaixonado por criar experiências
+                    digitais excepcionais. Minha habilidade em unir forma e função, evidenciada em meu portfólio,
+                    destaca-me
+                    como profissional pronto para elevar seus projetos. Estou ansioso para colaborar e construir
+                    experiências notáveis juntos.</p>
+                <span class="fade-in-left4">
 
-        <div id="fullpage">
-            <div class="section " id="section0">
-
-                <div class="container-fluid">
-                    <div class="container">
-
-
-                        <div class="row">
-                            <div class="col-md-3"></div>
-                        </div>
-                        <div class="row">
-                            <div class="col-md-4 offset-md-4 alerta" data-aos="fade-down" data-aos-easing="linear"
-                                    data-aos-duration="3000">
-                                <div class="alert alert-dark alert-dismissible fade show" role="alert">
-                                    <strong>Eí!</strong> Me desculpe a bagunça, mas ainda estou arrumando a casa.
-                                    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                                        <span aria-hidden="true">&times;</span>
-                                    </button>
-                                </div>
-                            </div>
-                            <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6 mt-5">
-                                <p class="titulo" data-aos="zoom-in">Olá, mundo!<span class="underline">_</span></p>
-                                <p class="sub-titulo" data-aos="zoom-in">Eu sou Fabiano Antero</p>
-                            </div>
-                            <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12">
-                                <img class="perfil" data-aos="fade-down" data-aos-easing="linear"
-                                    data-aos-duration="1500"
-                                    src="img/45268743_2590471564311294_7347460515525835736_n.svg" alt="">
-                            </div>
-                            <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6 mt-5" data-aos="zoom-in">
-                                <p class="titulo-conteudo"> UI & UX / Developer</p>
-                                <p class="conteudo">Um grande entusiasta do design
-                                    centrado no usuário. <br> A Experiência do Usuário é a grande diferença entre o
-                                    sucesso e o fracasso de qualquer negócio.</p>
-                            </div>
-                        </div>
-                        <div class="row mt-5">
-                            <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12">
-                                <a href="https://www.linkedin.com/in/fabianoantero/" class="btn btntwo btn-outline-warning" role="button" aria-pressed="true"
-                                    data-aos="zoom-in">Contate-me</a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-12">
-                            <img class="img-bg-logo" data-aos="fade-right" src="img/background-logo.svg">
-                        </div>
-                    </div>
-                </div>
-
+                    <a class="apresentation-buttom" href="https://www.linkedin.com/in/fabianoantero/"
+                        target="_blank">Fale
+                        comigo <img class="apresentation-send" src="img/send.svg" alt="" srcset=""></a>
+                </span>
             </div>
-
-
-            <div class="section" id="section1">
-                <div class="row">
-                    <div class="col-md-12">
-                        <img class="img-bg-logo2" src="img/background-logo.svg">
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-md-6 ">
-                        <div>
-                            <img class="efeito" src="img/efeito.svg" alt="">
-                        </div>
-                        <img class="sobre mt-5" src="img/AirBrush_20191119115702.jpg" alt="">
-                    </div>
-                    <div class="col-md-6 mt-5">
-                        <div class="sobre-text">
-                            <p class="mt-4">
-                                Olá, me chamo Fabiano Antero, sou estudante de Ciência da Computação pelo Unipê (Centro Universitário de João pessoa), e atualmente resido na cidade de João Pessoa/PB.
-                            </p>
-                            <p>
-                                <br>Minha jornada teve início a cerca de dois anos quando entrei para o projeto de extensão, <strong>Fábrica de Software</strong>.
-                                Atualmente na Fábrica de Software, estou a frente de um projeto para os alunos de medicina, um <strong>aplicativo mobile chamado Anamnese Digital</strong> , nele criei toda sua <strong>UI & UX</strong> e utilizei 
-                                <strong>Ionic</strong> e <strong>Angular</strong>.
-                            </p>
-                            <p>
-                                <br> Para fomentar minha jornada, estou a um ano como estagiário no Grupo Energisa S.A no setor de canais digitais, onde entrei como FullStack, porém
-                                minha maior área de atuação nos cánais digitias foi com <strong>UI & UX</strong> de seus produtos, um dos produtos que mais teve minha atenção com <strong>UI & UX</strong> foi o novo toten da Energisa.
-                            </p>
-                        </div>
-                    </div>
-                </div>
+            <div class="photo">
+                <img class="photo-eu fade-in-top" src="img/eu.svg" alt="">
             </div>
-            <div class="section" id="section2">
-
-                <div class="slider__warpper">
-                    <div class="flex__container flex--eon flex--active" data-slide="1">
-                        <div class="flex__item flex__item--left">
-                            <div class="flex__content">
-                                <p class="text--sub">Landing Page</p>
-                                <h1 class="text--big">Energisa On</h1>
-                                <p class="text--normal">Nesse projeto pude estruturar todo seu front-end e criar alguns
-                                    scripts. <br>
-                                    Os botões para baixar o aplicativo na Apple Store e Google Play só são exibidos para respectivos
-                                    seus sistemas.
-                                    A navbar só é exibida se os botões das lojas não estiverem visíveis na tela.</p>
-                                <div class="row mt-5">
-                                    <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12">
-                                        <a href="https://fabiano-antero.github.io/EON/" class="btn btn-info"
-                                            target="_blank" role="button" aria-pressed="true">Ver modelo</a>
-                                    </div>
-                                </div>
-                            </div>
-                            <p class="text__background">Energisa</p>
-                        </div>
-                        <div class="flex__item flex__item--right"></div>
-                        <img class="eon__img img-fluid" src="img/eon.png" />
-                    </div>
-                    <div class="flex__container flex--piplup animate--start" data-slide="2">
-                        <div class="flex__item flex__item--left">
-                            <div class="flex__content">
-                                <p class="text--sub">Landing Page</p>
-                                <h1 class="text--big-wt">Totem Energisa</h1>
-                                <p class="text--normal">Esse projeto teve como objetivo facilitar a busca por um
-                                    terminal de autoatendimento da Energida.</p>
-                                <div class="row mt-5">
-                                    <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12">
-                                        <a href="https://fabiano-antero.github.io/TOTEM/" class="btn bg-light"
-                                            target="_blank" role="button" aria-pressed="true">Ver modelo</a>
-                                    </div>
-                                </div>
-                            </div>
-                            <p class="text__background">Energisa</p>
-                        </div>
-                        <div class="flex__item flex__item--right"></div>
-                        <img class="eon__img" src="img/etotem.png" />
-                    </div>
-                    <div class="flex__container flex--blaziken animate--start" data-slide="3">
-                        <div class="flex__item flex__item--left">
-                            <div class="flex__content">
-                                <p class="text--sub ">Página de confirmação</p>
-                                <h1 class="text--big">Gerenciamento de imóvel</h1>
-                                <p class="text--normal ">Criei essa página para ser enviada via SMS, para que os clientes confirmem a solicitação de gerecnciamneto de uma de suas  unidades consumidoras.
-                                    Nela consumo um EndPoint com javascript para que ele retorne os dados do solicitante.
-                                </p>
-                            </div>
-                            <p class="text__background">Energisa</p>
-                        </div>
-                        <div class="flex__item flex__item--right"></div>
-                        <img class="eon__img" src="img/Egenrencia.png" />
-                    </div>
-                    <div class="flex__container flex--dialga animate--start" data-slide="4">
-                        <div class="flex__item flex__item--left">
-                            <div class="flex__content">
-                                <p class="text--sub">Mobile</p>
-                                <h1 class="text--big">Anamnese Digital</h1>
-                                <p class="text--normal">
-                                    Aplicativo desenvolvido com o framework Ionic, que alimenta uma API
-                                    Restfull em Python e Flask. Toda sua UI e UX foram criadas por mim.
-                                </p>
-                                <p class="text--normal">Além de estar a frente desse projeto,também estou atuando como desenvolverdo, trabanhando no front-end do aplicativo e no front-end da dashboard </p>
-                            </div>
-                            <p class="text__background">Fábrica de software</p>
-                        </div>
-                        <div class="flex__item flex__item--right"></div>
-                        <img class="eon__img" src="./img/Grupo 18.png" />
-                    </div>
-                    <!--
-                    <div class="flex__container flex--zekrom animate--start" data-slide="5">
-                        <div class="flex__item flex__item--left">
-                            <div class="flex__content">
-                                <p class="text--sub">Pokemon Gen V</p>
-                                <h1 class="text--big">Zekrom</h1>
-                                <p class="text--normal">Zekrom is a Dragon/Electric-type Legendary Pokémon. It is part
-                                    of the Tao Trio, along with Reshiram and Kyurem. Zekrom is a large, black draconian
-                                    Pokémon that seems to share its theme with its counterpart, Reshiram. It has
-                                    piercing red eyes and
-                                    dark gray to black skin that seems to be armor-like.</p>
-                            </div>
-                            <p class="text__background">Zekrom</p>
-                        </div>
-                        <div class="flex__item flex__item--right"></div>
-                        <img class="eon__img" src="https://s4.postimg.org/malmhgn9p/zekrom.png" />
-                    </div>
-                -->
-                </div>
-
-                <div class="slider__navi">
-                    <a href="#" class="slide-nav active" data-slide="1">pikachu</a>
-                    <a href="#" class="slide-nav" data-slide="2">piplup</a>
-                    <a href="#" class="slide-nav" data-slide="3">blaziken</a>    
-                    <a href="#" class="slide-nav" data-slide="4">dialga</a>
-                        <!--
-                    <a href="#" class="slide-nav" data-slide="5">zekrom</a>-->
-                </div>
-            </div>
-
-
-
-
         </div>
+        <div class="section-two">
 
-    </main>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script type="text/javascript" src="dist/fullpage.min.js"></script>
-    <script type="text/javascript" src="js/examples.js"></script>
-    <script type="text/javascript" src="js/controle.js"></script>
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
-        integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
-        crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
-        integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
-        crossorigin="anonymous"></script>
-    <script src="js/slide.js"></script>
-    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-    <script>
-        AOS.init();
-    </script>
-    <script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
+            <div class="portfolio">
+                <div>
+                    <img class="fade-in-top design" src="img/Design.svg" alt="">
+                </div>
+                <div>
+                    <p class="portfolio-about">
+                        Olá! Tudo bem? <br> <br> Como você deve ter notado, minha página e meu portfólio estão passando
+                        por uma
+                        renovação.Após cinco anos entre estágios e um período como CLT, e recentemente, fui afetado por
+                        um Layoff. <br> <br> Diante dessa surpresa, percebi que meu portfólio não acompanhava os
+                        conhecimentos adquiridos durante essa jornada.
+                        Agora estou organizando meus trabalhos mais recentes e aprimorando-os para compartilhar aqui,
+                        proporcionando uma experiência visualmente agradável.
+                    </p>
+                    <br> <br>
+                    <p class="portfolio-about">Aguarde um pouco mais, em breve este espaço estará repleto de estudos de
+                        caso,
+                        interfaces e projetos rápidos nos quais atuei como freelancer. Agradeço pela paciência e prometo
+                        que
+                        valerá a pena esperar!</p>
+
+                    <p class="portfolio-about">At.te: Fabiano Antero ✌</p>
+                </div>
+
+            </div>
+        </div>
+    </div>
+    <div>
+        <p class="apresentation-eusou mar1">
+            Veja uma amostra de um projeto relâmpago 
+        </p>
+        <span class="portfolio-about mar2">
+            Projeto concluído de maneira rápida e eficiente.
+        </span>
+        <div>
+            <img class="fade-in-top design" src="img/antecipa.png" alt="">
+        </div>
+    </div>
+
+    <footer>© 2023 Fabiano Antero UI&UX Designer</footer>
 </body>
 
 </html>
