--- a/index.html
+++ b/index.html
@@ -64,19 +64,21 @@
             </div>
         </div>
     </div>
-    <div>
-        <p class="apresentation-eusou mar1">
-            Veja uma amostra de um projeto relâmpago 
-        </p>
-        <span class="portfolio-about mar2">
-            Projeto concluído de maneira rápida e eficiente.
-        </span>
-        <div>
-            <img class="fade-in-top design" src="img/antecipa.png" alt="">
+    <div class="section-tree">
+        <div class="amostra">
+            <p class="apresentation-eusou mar1">
+                Veja uma amostra de um projeto relâmpago
+            </p>
+            <p class="amostra-title">
+                Projeto concluído de maneira rápida e eficiente.
+            </p>
+            <div>
+                <img class="fade-in-top design" src="img/antecipa.png" alt="">
+            </div>
         </div>
+
     </div>
 
-    <footer>© 2023 Fabiano Antero UI&UX Designer</footer>
 </body>
 
 </html>
