correção da amostra

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         </div>
         <div class="section-tree">
             <div class="amostra">
-                <p class="apresentation-eusou mar1">
+                <p class="amostra-title1">
                     Veja uma amostra de um projeto relâmpago
                 </p>
                 <p class="amostra-title">
