correção da amostra

--- a/index.html
+++ b/index.html
@@ -14,16 +14,17 @@
     <div class="container">
         <div class="section-one">
             <div class="apresentation">
-                <span class="apresentation-title1 fade-in-left">Olá, Mundo!</span>
-                <span class="apresentation-title2 fade-in-left2">Eu sou <br> Fabiano Antero</span>
-                <p class="apresentation-intro fade-in-left3">
-                    Sou um Designer de UI&UX apaixonado por criar experiências
+                <span class="apresentation-Ola fade-in-left">Olá, mundo!</span>
+                <span class="apresentation-eusou fade-in-left2">
+                    Eu sou <br> Fabiano Antero
+                </span>
+                <p class="apresentation-about fade-in-left3">Sou um Designer de UI&UX apaixonado por criar experiências
                     digitais excepcionais. Minha habilidade em unir forma e função, evidenciada em meu portfólio,
-                    destaca-mecomo profissional pronto para elevar seus projetos. Estou ansioso para colaborar e
-                    construir
-                    experiências notáveis juntos.
-                </p>
-                <span class="fade-inlaft4">
+                    destaca-me
+                    como profissional pronto para elevar seus projetos. Estou ansioso para colaborar e construir
+                    experiências notáveis juntos.</p>
+                <span class="fade-in-left4">
+
                     <a class="apresentation-buttom" href="https://www.linkedin.com/in/fabianoantero/"
                         target="_blank">Fale
                         comigo <img class="apresentation-send" src="img/send.svg" alt="" srcset=""></a>
@@ -34,31 +35,28 @@
             </div>
         </div>
         <div class="section-two">
+
             <div class="portfolio">
                 <div>
                     <img class="fade-in-top design" src="img/Design.svg" alt="">
                 </div>
                 <div>
                     <p class="portfolio-about">
-                        Olá! Tudo bem?
-                    </p>
-                    <p class="portfolio-about">
-                        Como você deve ter notado, minha página e meu portfólio estão passando
+                        Olá! Tudo bem? <br> <br> Como você deve ter notado, minha página e meu portfólio estão passando
                         por uma
                         renovação.Após cinco anos entre estágios e um período como CLT, e recentemente, fui afetado por
-                        um Layoff.
-                    </p>
-                    <p class="portfolio-about">
-                        Diante dessa surpresa, percebi que meu portfólio não acompanhava os
+                        um Layoff. <br> <br> Diante dessa surpresa, percebi que meu portfólio não acompanhava os
                         conhecimentos adquiridos durante essa jornada.
                         Agora estou organizando meus trabalhos mais recentes e aprimorando-os para compartilhar aqui,
                         proporcionando uma experiência visualmente agradável.
                     </p>
-                    <p class="portfolio-about">
-                        Aguarde um pouco mais, em breve este espaço estará repleto de estudos de
-                        caso, interfaces e projetos rápidos nos quais atuei como freelancer.
-                        Agradeço pela paciência e prometoquevalerá a pena esperar!
-                    </p>
+                    <br> <br>
+                    <p class="portfolio-about">Aguarde um pouco mais, em breve este espaço estará repleto de estudos de
+                        caso,
+                        interfaces e projetos rápidos nos quais atuei como freelancer. Agradeço pela paciência e prometo
+                        que
+                        valerá a pena esperar!</p>
+
                     <p class="portfolio-about">At.te: Fabiano Antero ✌</p>
                 </div>
 
@@ -66,20 +64,20 @@
         </div>
         <div class="section-tree">
             <div class="amostra">
-                <div>
-                    <p class="amostra-title1">
-                        Veja uma amostra de um projeto relâmpago
-                    </p>
-                    <p class="amostra-title">
-                        Projeto concluído de maneira rápida e eficiente.
-                    </p>
-                </div>
+                <p class="amostra-title1">
+                    Veja uma amostra de um projeto relâmpago
+                </p>
+                <p class="amostra-title">
+                    Projeto concluído de maneira rápida e eficiente.
+                </p>
                 <div>
                     <img class="fade-in-top design" src="img/antecipa.png" alt="">
                 </div>
             </div>
+
         </div>
     </div>
+
 </body>
 
 </html>
