correção da amostra2

--- a/index.html
+++ b/index.html
@@ -64,12 +64,15 @@
         </div>
         <div class="section-tree">
             <div class="amostra">
-                <p class="amostra-title1">
-                    Veja uma amostra de um projeto relâmpago
-                </p>
-                <p class="amostra-title">
-                    Projeto concluído de maneira rápida e eficiente.
-                </p>
+                <div>
+                    <p class="amostra-title1">
+                        Veja uma amostra de um projeto relâmpago
+                    </p>
+                    <p class="amostra-title">
+                        Projeto concluído de maneira rápida e eficiente.
+                    </p>
+                </div>
+
                 <div>
                     <img class="fade-in-top design" src="img/antecipa.png" alt="">
                 </div>
