correção da amostra2

--- a/index.html
+++ b/index.html
@@ -41,22 +41,20 @@
                     <img class="fade-in-top design" src="img/Design.svg" alt="">
                 </div>
                 <div>
-                    <p class="portfolio-about">
-                        Olá! Tudo bem? <br> <br> Como você deve ter notado, minha página e meu portfólio estão passando
+                    <p class="portfolio-about">Olá! Tudo bem?</p>
+                    <p class="portfolio-about">Como você deve ter notado, minha página e meu portfólio estão passando
                         por uma
                         renovação.Após cinco anos entre estágios e um período como CLT, e recentemente, fui afetado por
-                        um Layoff. <br> <br> Diante dessa surpresa, percebi que meu portfólio não acompanhava os
+                        um Layoff.</p>
+                    <p class="portfolio-about">Diante dessa surpresa, percebi que meu portfólio não acompanhava os
                         conhecimentos adquiridos durante essa jornada.
                         Agora estou organizando meus trabalhos mais recentes e aprimorando-os para compartilhar aqui,
-                        proporcionando uma experiência visualmente agradável.
-                    </p>
-                    <br> <br>
+                        proporcionando uma experiência visualmente agradável.</p>
                     <p class="portfolio-about">Aguarde um pouco mais, em breve este espaço estará repleto de estudos de
                         caso,
                         interfaces e projetos rápidos nos quais atuei como freelancer. Agradeço pela paciência e prometo
                         que
                         valerá a pena esperar!</p>
-
                     <p class="portfolio-about">At.te: Fabiano Antero ✌</p>
                 </div>
 
